--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -15,6 +15,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           USERNAME: ${{github.repository_owner}}
+        with:
+          token: ${{ secrets.MY_PERSONAL_TOKEN }}
       - name: Commit & Push
         run: |
           git config user.name github-actions
